# gliner-api

./: .coverage  .env  .gitignore  alembic.ini  client.py  docker-compose.yml  gliemb.py  gliembapi-v1.py  gliembapi.py  gliembapiv15.py  gliner_model_layers.txt  glistudio.py  pyproject.toml  requirements.txt  tt.py
.github/workflows/: python-app.yml
alembic/: env.py
docker/: docker-compose.yml  entrypoint.sh  init.sql  prometheus.yml
faiss_index/: index.faiss
mlruns/0/: meta.yaml
mlruns/0/3b03f8f68d5148a5b762d1c7d8139b47/: meta.yaml
mlruns/0/be7e991d548d4cd0b73693aa1ce51704/: meta.yaml
mlruns/0/be7f109cebd04363bdbf7f89729c742a/: meta.yaml
mlruns/0/d86f88232dad431a83d3695eaf8ac584/: meta.yaml
src/: alembic.ini  main.py  tree.txt  tt.py
src/alembic/: env.py
src/alembic/versions/: 74c201fafbba_initial_migration.py
src/core/: config.py
src/db/: init_db.py  models.py  session.py
src/routers/: auth.py  dataset.py  inference.py  ml_backend.py  train.py
src/schemas/: dataset.py  inference.py  schemas.py  train.py
src/services/: dataset_creator.py  labelstudio_manager.py  model_manager.py  ocr_service.py
src/utils/: file_utils.py  gliner_utils.py  metrics.py  mlflow_manager.py  mlflow_setup.py
tests/: conftest.py
tests/core/: test_config.py
tests/db/: test_models.py
tests/routers/: test_auth.py  test_dataset.py  test_inference.py  test_train.py
tests/services/: test_dataset_creator.py  test_ocr_service.py  test_security.py
tests/utils/: test_file_utils.py  test_gliner_utils.py  test_metrics.py  test_mlflow_setup.py
(+5 files in other folders)
